--- a/.gitignore
+++ b/.gitignore
@@ -57,3 +57,5 @@ dist-ssr/
 # OS / Misc
 # --------------------
 Thumbs.db
+
+C:\Users\darsh\Desktop\Main Documents Folder\NewsVerse\backend\Whatsapp_Messaging\fix_twilio.py
